starting functional tests
